--- a/article-age-health.html
+++ b/article-age-health.html
@@ -72,8 +72,8 @@
       </div>
       <div class="footer-section">
         <h4>Contact Information</h4>
-        <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +91 XXXXXXXXX</p>
-        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> XXXXX@gmail.com</p>
+        <p><i class="fas fa-phone"></i> <strong>Phone:</strong> <a href="tel:+917013696997" style="color: var(--primary);">+91 70136 96997</a></p>
+        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Nshivaramireddy@gmail.com" style="color: var(--primary);">Nshivaramireddy@gmail.com</a></p>
         <p><i class="fas fa-clock"></i> <strong>Hours:</strong></p>
         <p>Mon-Sat: 9:00 AM – 5:00 PM</p>
         <p>Sunday: 10:00 AM – 2:00 PM</p>
