--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; align-items: center; max-width: 1200px; margin: 0 auto; padding: 0 20px;">
       <div>
         <h2>Expert Orthopedic & Joint Replacement Care</h2>
-        <p>Led by DR N Shiva Rami Reddy — D (Ortho), DNB (Ortho), FLLR, FIAS New Delhi</p>
+        <p>Led by DR N Shiva Rami Reddy — D (Ortho), DNB (Ortho), FIJR, FIAS New Delhi</p>
         <p class="credentials">Certified Orthopedic Surgeon | Joint Replacement Specialist | Trauma Surgeon</p>
         <a class="btn btn-primary" href="appoinment.html">Book Appointment Now</a>
       </div>
@@ -81,7 +81,7 @@
             <li><strong>MBBS</strong> - Bachelor of Medicine, Bachelor of Surgery</li>
             <li><strong>D (Ortho)</strong> - Diploma in Orthopedics (with 15+ years expertise)</li>
             <li><strong>DNB (Ortho)</strong> - Diplomate of National Board in Orthopedics</li>
-            <li><strong>FLLR</strong> - Fellow of Limb Lengthening & Reconstruction</li>
+            <li><strong>FIJR</strong> - Fellow of Limb Lengthening & Reconstruction</li>
             <li><strong>FIAS</strong> - Fellow of Indian Arthroscopy Society</li>
           </ul>
         </div>
@@ -249,7 +249,7 @@
       </div>
       <div class="profile-content">
         <h2>DR N Shiva Rami Reddy</h2>
-        <p class="profile-credentials">M.B.B.S., D (Ortho), DNB (Ortho), FLLR, FIAS</p>
+        <p class="profile-credentials">M.B.B.S., D (Ortho), DNB (Ortho), FIJR, FIAS</p>
         <p class="profile-title">Chief Orthopedic Surgeon & Joint Replacement Specialist</p>
         <p class="profile-bio">With 15+ years of dedicated experience in orthopedic surgery, DR N Shiva Rami Reddy has earned recognition as a leading expert in joint replacement, trauma management, and sports injury treatment. His patient-centric approach combined with cutting-edge surgical techniques has transformed thousands of lives.</p>
         <div class="profile-features">
@@ -399,8 +399,8 @@
 
       <div class="footer-section">
         <h4>Contact Information</h4>
-        <p><i class="fas fa-phone"></i> <strong>Dr's Number:</strong> +91 XXXXXXXXX</p>
-        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> XXXXX@gmail.com</p>
+        <p><i class="fas fa-phone"></i> <strong>Dr's Number:</strong> <a href="tel:+917013696997" style="color: var(--primary);">+91 70136 96997</a></p>
+        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Nshivaramireddy@gmail.com" style="color: var(--primary);">Nshivaramireddy@gmail.com</a></p>
         <p><i class="fas fa-clock"></i> <strong>Hours:</strong></p>
         <p>Mon-Sat: 9:00 AM – 5:00 PM</p>
         <p>Sunday: 10:00 AM – 2:00 PM</p>
@@ -409,7 +409,8 @@
       <div class="footer-section">
         <h4>Hospital Locations</h4>
         <p><strong>Sri Krishna Hospital:</strong></p>
-        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+91XXXXXXXXX" style="color: var(--primary);" >+91 XXXXXXXXX</a></p>
+        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+917569802928" style="color: var(--primary);">+91 75698 02928</a> / <a href="tel:+918099035332" style="color: var(--primary);">+91 80990 35332</a></p>
+        <p style="margin-top:12px;"><strong>APEX Multi Speciality Hospital:</strong><br>NST ROAD, Balaji Nagar<br>Khammam<br><i class="fas fa-phone"></i> <a href="tel:+919063706006" style="color: var(--primary);">+91 90637 06006</a></p>
       </div>
 
       <div class="footer-section">
