--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,12 @@
       <div style="text-align: center;">
         <i class="fas fa-envelope" style="font-size: 2em; color: var(--primary); margin-bottom: 10px;"></i>
         <h4>Email</h4>
-        <p><a href="mailto:XXXXX@gmail.com" style="color: var(--primary); text-decoration: none;">XXXXX@gmail.com</a></p>
+        <p><a href="mailto:Nshivaramireddy@gamil.com" style="color: var(--primary); text-decoration: none;">Nshivaramireddy@gamil.com</a></p>
       </div>
       <div style="text-align: center;">
         <i class="fas fa-phone" style="font-size: 2em; color: var(--primary); margin-bottom: 10px;"></i>
         <h4>Phone</h4>
-        <p><a href="tel:+91" style="color: var(--primary); text-decoration: none;">+91 XXXXXXXXX</a></p>
+        <p><a href="tel:+917013696997" style="color: var(--primary); text-decoration: none;">+91 70136 96997</a></p>
       </div>
       <div style="text-align: center;">
         <i class="fas fa-clock" style="font-size: 2em; color: var(--primary); margin-bottom: 10px;"></i>
@@ -55,12 +55,22 @@
         <p><strong>Address:</strong></p>
         <p>Boppana Plaza, NST Rd, near Kanakadurga Temple<br>Lenin Nagar, Khammam<br>Telangana 507001</p>
         <p style="margin-top: 15px;"><strong><i class="fas fa-phone"></i> Contact:</strong></p>
-        <p><a href="tel:+91" style="color: var(--primary); text-decoration: none; font-weight: bold;">+91 XXXXXXXXX</a></p>
+        <p><a href="tel:+917569802928" style="color: var(--primary); text-decoration: none; font-weight: bold;">+91 75698 02928</a> / <a href="tel:+918099035332" style="color: var(--primary); text-decoration: none; font-weight: bold;">+91 80990 35332</a></p>
+      </div>
+      <div style="border: 2px solid var(--primary); border-radius: 10px; padding: 20px; background: #f8f9fa;">
+        <h4 style="color: var(--primary); margin-bottom: 15px;"><i class="fas fa-hospital"></i> APEX Multi Speciality Hospital</h4>
+        <p><strong>Address:</strong></p>
+        <p>NST ROAD, Balaji Nagar<br>Khammam</p>
+        <p style="margin-top: 15px;"><strong><i class="fas fa-phone"></i> Contact:</strong></p>
+        <p><a href="tel:+919063706006" style="color: var(--primary); text-decoration: none; font-weight: bold;">+91 90637 06006</a></p>
       </div>
     </div>
 
     <h3 style="margin-top: 40px;"><i class="fas fa-map-marker-alt"></i> Find Us on Map</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3810.282903527478!2d80.14384607481328!3d17.253542883610955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a345996ea0d7963%3A0xac6f8c0451f1e762!2sSri%20Krishna%20Hospital!5e0!3m2!1sen!2sin!4v1772098925413!5m2!1sen!2sin" width="100%" height="450" style="border:0; border-radius: 8px; margin-top: 20px;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3810.3131829965846!2d80.1429272745717!3d17.25207678361215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3459ccf8e76b75%3A0xc9cac4b98c10d93e!2sApex%20Multi%20Speciality%20Hospital%20%7C%20Best%20Hospital%20In%20Khammam!5e0!3m2!1sen!2sin!4v1772186052919!5m2!1sen!2sin" width="100%" height="450" style="border:0; border-radius: 8px; margin-top: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    
   </section>
 
   <footer class="footer">
@@ -93,8 +103,8 @@
 
       <div class="footer-section">
         <h4>Contact Information</h4>
-        <p><i class="fas fa-phone"></i> <strong>Dr's Number:</strong> +91 XXXXXXXXX</p>
-        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> XXXXX@gmail.com</p>
+        <p><i class="fas fa-phone"></i> <strong>Dr's Number:</strong> <a href="tel:+917013696997" style="color: var(--primary);">+91 70136 96997</a></p>
+        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Nshivaramireddy@gmail.com" style="color: var(--primary);">Nshivaramireddy@gmail.com</a></p>
         <p><i class="fas fa-clock"></i> <strong>Hours:</strong></p>
         <p>Mon-Sat: 9:00 AM – 5:00 PM</p>
         <p>Sunday: 10:00 AM – 2:00 PM</p>
@@ -103,7 +113,8 @@
       <div class="footer-section">
         <h4>Hospital Locations</h4>
         <p><strong>Sri Krishna Hospital:</strong></p>
-        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+91XXXXXXXXX" style="color: var(--primary);" >+91 XXXXXXXXX</a></p>
+        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+917569802928" style="color: var(--primary);">+91 75698 02928</a> / <a href="tel:+918099035332" style="color: var(--primary);">+91 80990 35332</a></p>
+        <p style="margin-top:12px;"><strong>APEX Multi Speciality Hospital:</strong><br>NST ROAD, Balaji Nagar<br>Khammam<br><i class="fas fa-phone"></i> <a href="tel:+919063706006" style="color: var(--primary);">+91 90637 06006</a></p>
         
       </div>
 
