--- a/faq.html
+++ b/faq.html
@@ -318,9 +318,9 @@
         <p>Booking a consultation is easy:</p>
         <ul>
           <li><strong>Online:</strong> Click "Book Appointment" button above</li>
-          <li><strong>Phone:</strong> Call us at +91 XXXXXXXXX</li>
+          <li><strong>Phone:</strong> Call us at <a href="tel:+917013696997" style="color: var(--primary);">+91 70136 96997</a></li>
           <li><strong>Visit:</strong> Walk-in at our clinic during operating hours</li>
-          <li><strong>Email:</strong> Send us details at XXXXX@gmail.com</li>
+          <li><strong>Email:</strong> Send us details at <a href="mailto:Nshivaramireddy@gmail.com" style="color: var(--primary);">Nshivaramireddy@gmail.com</a></li>
         </ul>
         <p><strong>Operating Hours:</strong><br>Mon-Sat: 9:00 AM – 5:00 PM<br>Sunday: 10:00 AM – 2:00 PM</p>
       </div>
@@ -375,8 +375,8 @@
 
       <div class="footer-section">
         <h4>Contact Information</h4>
-        <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +91 XXXXXXXXX</p>
-        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> XXXXX@gmail.com</p>
+        <p><i class="fas fa-phone"></i> <strong>Phone:</strong> <a href="tel:+917013696997" style="color: var(--primary);">+91 70136 96997</a></p>
+        <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:Nshivaramireddy@gmail.com" style="color: var(--primary);">Nshivaramireddy@gmail.com</a></p>
         <p><i class="fas fa-clock"></i> <strong>Hours:</strong></p>
         <p>Mon-Sat: 9:00 AM – 5:00 PM</p>
         <p>Sunday: 10:00 AM – 2:00 PM</p>
@@ -385,7 +385,8 @@
       <div class="footer-section">
         <h4>Hospital Locations</h4>
         <p><strong>Sri Krishna Hospital:</strong></p>
-        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+91XXXXXXXXX" style="color: var(--primary);" >+91 XXXXXXXXX</a></p>
+        <p>Boppana Plaza, NST Rd<br>Khammam, TG 507001<br><i class="fas fa-phone"></i> <a href="tel:+917569802928" style="color: var(--primary);">+91 75698 02928</a> / <a href="tel:+918099035332" style="color: var(--primary);">+91 80990 35332</a></p>
+        <p style="margin-top:12px;"><strong>APEX Multi Speciality Hospital:</strong><br>NST ROAD, Balaji Nagar<br>Khammam<br><i class="fas fa-phone"></i> <a href="tel:+919063706006" style="color: var(--primary);">+91 90637 06006</a></p>
       </div>
 
       <div class="footer-section">
